WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132528
[UI-side compositing] Assertion in PlatformCAFilters::setFiltersOnLayer with animated reference filter
https://bugs.webkit.org/show_bug.cgi?id=132528
Summary
[UI-side compositing] Assertion in PlatformCAFilters::setFiltersOnLayer with ...
Simon Fraser (smfr)
Reported
2014-05-03 12:59:31 PDT
[UI-side compositing] Assertion in PlatformCAFilters::setFiltersOnLayer with animated reference filter
Attachments
Patch
(5.98 KB, patch)
2014-05-03 13:04 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(6.05 KB, patch)
2014-05-03 13:06 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-05-03 13:04:05 PDT
Created
attachment 230761
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-05-03 13:04:49 PDT
<
rdar://problem/16671660
>
Simon Fraser (smfr)
Comment 3
2014-05-03 13:06:05 PDT
Reopening to attach new patch.
Simon Fraser (smfr)
Comment 4
2014-05-03 13:06:08 PDT
Created
attachment 230762
[details]
Patch
Tim Horton
Comment 5
2014-05-03 13:08:49 PDT
Comment on
attachment 230762
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=230762&action=review
> Source/WebKit2/Shared/WebCoreArgumentCoders.cpp:1608 > + decoder.markInvalid();
Does 'return false' not already indicate an invalid message?
Simon Fraser (smfr)
Comment 6
2014-05-03 13:33:42 PDT
https://trac.webkit.org/r168228
Simon Fraser (smfr)
Comment 7
2014-05-03 13:34:47 PDT
(In reply to
comment #5
)
> (From update of
attachment 230762
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=230762&action=review
> > > Source/WebKit2/Shared/WebCoreArgumentCoders.cpp:1608 > > + decoder.markInvalid(); > > Does 'return false' not already indicate an invalid message?
No, the lowest-level decoding is the one responsible for markInvalid().
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug